REGRESSION (r196620): Web Inspector: When the scrollbars are always visible, the console prompt is 1px taller https://bugs.webkit.org/show_bug.cgi?id=154328 <rdar://problem/24692996>
Introduce a CSS variable to ensure that the quick console is the
same height as the bottom right section of the styles sidebar.

Reviewed by Timothy Hatcher.

* UserInterface/Views/CSSStyleDetailsSidebarPanel.css:
(.sidebar > .panel.details.css-style > .content ~ .options-container):
(.sidebar > .panel.details.css-style > .content ~ .class-list-container):
* UserInterface/Views/QuickConsole.css:
(.quick-console):
* UserInterface/Views/Variables.css:
(:root):


Canonical link: https://commits.webkit.org/172495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196741 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/CSSStyleDetailsSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/CSSStyleDetailsSidebarPanel.css
@@ -76,7 +76,7 @@
 
 .sidebar > .panel.details.css-style > .content ~ .options-container {
     bottom: 0;
-    height: 29px;
+    height: var(--console-prompt-min-height);
 }
 
 .sidebar > .panel.details.css-style > .content:not(.supports-new-rule, .has-filter-bar) ~ :matches(.options-container, .class-list-container) {
@@ -123,7 +123,7 @@
 
 .sidebar > .panel.details.css-style > .content ~ .class-list-container {
     flex-wrap: wrap;
-    bottom: 29px;
+    bottom: var(--console-prompt-min-height);
     max-height: 65px;
     padding: 3px 2px;
     overflow-y: scroll;
